# myEVS_denoise

./: ._parse_best_f1.py  .gitignore  CMakeLists.txt  README.md  _tmp_ablation.py  _tmp_ablation_ed24.py  _tmp_ablation_multi.py  _tmp_apply_v21.py  _tmp_best_f1_from_roc.py  _tmp_formula_opt.py  _tmp_fpga_radius_cmp.py  _tmp_fpga_radius_smart.py  _tmp_n149v21_fullrun.py  _tmp_n149v2_fair_cmp.py  _tmp_n149v2_fix.py  _tmp_n149v2_validate.py  _tmp_v21_full_cmp.py  _tmp_v21_validate.py  environment.yml  hot_state_validation_plan.md  match_us.md  pyproject.toml
.claude/: settings.local.json
cpp/: ebf_n176_bench.cpp
experiments/: example_experiment.toml  s23_hotmask_train_out.txt  s23_hotmask_train_out_neg2pos_topk32768.txt  s23_hotmask_train_out_neg2pos_topk32768_dil1.txt  s23_hotmask_train_out_neg2pos_topk32768_train200k_ep15.txt  s23_hotmask_train_out_neg2pos_topk4096_dil1.txt  s23_hotmask_train_out_neg3pos_topk32768.txt  s23_hotmask_train_out_topk32768.txt
scripts/: ED24csv_to_npy.py  _tmp_check_esr_csv.py  _tmp_n135_781_prescreen_summary.py  chapter7_recompute_f1.py  eval_bestpoint_mesr_aocc.py  eval_mlpf_roc_once.py  export_mlpf_weights.py  mlpf_parallel_scheduler_20260522.py  mlpf_retrain_batch_20260522.py  mlpf_scheduler_rerun2.py  openeb_csv_to_evtq.py  run_baf_stcf_unified_tau.py  run_boundary_fix.py  run_experiment.py  run_pfd_tau_sweep_all.py  run_slomo_baf.ps1  run_slomo_ebf.ps1  run_slomo_ebf_paper_2d_local.ps1  run_slomo_ebf_paper_s_tau.ps1  run_slomo_ebf_tune.ps1  run_slomo_fdf.ps1  run_slomo_fdf_stcf_ebf.ps1  run_slomo_stcf.ps1  split_labeled_events.py  sweep_ebf_labelscore_grid.py  test_tau_sweep_all.py  test_unified_tau.py  train_mlpf_torch.py  (+2 more)
(+502 files in other folders)
