[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11", "cmake>=3.20", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "myevs"
version = "0.1.0"
description = "Offline parsing, denoising, visualization and evaluation for EVS event streams"
requires-python = ">=3.10"
authors = [{name = "myEVS"}]
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "tqdm>=4.66",
  "h5py>=3.10",
]

[project.scripts]
myevs = "myevs.cli:main"

[tool.scikit-build]
wheel.packages = ["src/myevs"]
